# manly

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  manly.py  pyproject.toml  requirements-dev.txt  setup.py  test_manly.py
