[build-system]
requires = ["flit"]
build-backend = "flit-buildapi"

[tool.flit.metadata]
module = "manly"
author = "Carl Bordum Hansen"
author-email = "carl@bordum.dk"
home-page = "https://github.com/Zaab1t/manly"
license = "MIT"
description-file = "README.md"
classifiers=Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Topic :: Software Development :: Documentation

[tool.flit.scripts]
manly = "manly:main"
